INT-18339: Fix for color contrast on icons across Snap and Open Forums to comply with AX contrast checker

--- a/styles.css
+++ b/styles.css
@@ -396,7 +396,7 @@ ACTIONS
 .hsuforum-toggle-subscribe[aria-pressed="false"] .svg-icon,
 .hsuforum-toggle-substantive[aria-pressed="false"] .svg-icon,
 .hsuforum-toggle-bookmark[aria-pressed="false"] .svg-icon {
-     fill: #ddd;
+     fill: #6c757d;
 }
 
 .hsuforum-toggle-subscribe[aria-pressed="true"] .svg-icon {
